--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.kanzaji.app</groupId>
   <artifactId>CatDownloader</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>DEVELOP</version>
 
   <name>Cat Downloader</name>
   <url>https://github.com/Kanzaji/Cat-Downloader</url>
