--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.kanzaji.app</groupId>
-  <artifactId>CatDownloader</artifactId>
+  <artifactId>Cat-Downloader</artifactId>
   <version>DEVELOP</version>
 
   <name>Cat Downloader</name>
@@ -30,6 +30,11 @@
       <artifactId>gson</artifactId>
       <version>2.9.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>24.0.0</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -75,7 +80,7 @@
             <archive>
               <manifest>
                 <addClasspath>.</addClasspath>
-                <mainClass>com.kanzajiold.catdownloader.CatDownloader</mainClass>
+                <mainClass>com.kanzaji.catdownloader.CatDownloader</mainClass>
               </manifest>
             </archive>
           </configuration>
